Row gap fixed

--- a/src/scss/blocks/status-block.scss
+++ b/src/scss/blocks/status-block.scss
@@ -35,7 +35,6 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    row-gap: 3px;
 
     border-left: 5px solid var(--header-color, #8F8F8F);
     
@@ -45,7 +44,7 @@
     }
 
     &__title {
-        margin: 0;
+        margin: 0 0 3px 0;
 
         font-family: Roboto, sans-serif;
         font-weight: 500;
