--- a/src/scss/blocks/task.scss
+++ b/src/scss/blocks/task.scss
@@ -8,8 +8,12 @@
         justify-content: space-between;
         align-items: center;
 
-        margin-top: 30px;
-        row-gap: 20px;
+        & > * {
+            margin-top: 10px;
+            margin-bottom: 10px;
+        }
+        margin-top: calc(30px - 10px);
+        margin-bottom: -10px;
 
         @media screen and (max-width: $md3 + px) {
             flex-wrap: wrap;
